# MayaStudy

./: .gitignore  README.md
Study_01 - CMakeLists/: CMakeLists.txt  helloWorldCmd.cpp
Study_02 - First Plugin/: CMakeLists.txt  myCommand.cpp  myCommand.h  pluginMaya.cpp
Study_03 - New CMakeLists/: CMakeLists.txt
Study_04 - Second Plugin/: CMakeLists.txt  myPlugin.cpp
Study_04 - Second Plugin/src/: gaussian.cpp  gaussian.h
Study_05 - Deformer/: CMakeLists.txt  myPlugin.cpp
Study_05 - Deformer/src/: deformer.cpp  deformer.h
Study_06 - Deformer2/: CMakeLists.txt  pluginMain.cpp
Study_06 - Deformer2/src/: deformer.cpp  deformer.h
blendMeshDeformer/: CMakeLists.txt  blendMeshDeformer.sln  blendMeshDeformer.vcproj
