cmake_minimum_required(VERSION 3.17)
project(cgcircuitproject)

SET(MAYA_VERSION 2019 CACHE STRING "Maya Version Number")
SET(SOURCE_FILES "helloWorldCmd.cpp")

FIND_PACKAGE(OpenGL REQUIRED)

SET(CUSTOM_DEFINITIONS "REQUIRE_IOSTREAM;_BOOL")
SET(MAYA_INSTALL_BASE_SUFFIX "")
SET(MAYA_INC_SUFFIX "include")
SET(MAYA_LIB_SUFFIX "lib")


# IF APPLE
SET(MAYA_INSTALL_BASE_DEFAULT "/Applications/Autodesk")
SET(MAYA_LIB_SUFFIX "Maya.app/Contents/MacOS")
SET(CUSTOM_DEFINITIONS "${CUSTOM_DEFINITIONS};OSMac_")


SET(MAYA_INSTALL_BASE_PATH ${MAYA_INSTALL_BASE_DEFAULT} CACHE STRING "Path containing all your maya installaions, like /usr/autodesk or /Applications/Autodesk")

SET(LIBRARIES ${LIBRARIES} "Foundation" "OpenMaya" "OpenMayaAnim" "OpenMayaUI" "OpenMayaRender" ${OPENGL_LIBRARIES})

SET(_MAYA_LOCATION ${MAYA_INSTALL_BASE_PATH}/maya${MAYA_VERSION}${MAYA_INSTALL_BASE_SUFFIX})

SET(_PROJECT ${PROJECT_NAME})

INCLUDE_DIRECTORIES(${_MAYA_LOCATION}/${MAYA_INC_SUFFIX} ${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS})

LINK_DIRECTORIES(${_MAYA_LOCATION}/${MAYA_LIB_SUFFIX})

ADD_LIBRARY(${_PROJECT} SHARED ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${_PROJECT} ${LIBRARIES})

SET_TARGET_PROPERTIES(${_PROJECT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
SET_TARGET_PROPERTIES(${_PROJECT} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
SET_TARGET_PROPERTIES(${_PROJECT} PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(${_PROJECT} PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(${_PROJECT} PROPERTIES SUFFIX ".bundle")
